--- a/WebApplication1/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/WebApplication1/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿
 
-<ul>
+<ul style="min-width: 130px;">
     <li><a asp-action="Index" asp-controller="Home" asp-route-category=""> Home </a></li>
     @if (User.IsInRole("Organizer"))
     {
