--- a/WebApplication1/Views/Account/RegisterTeam.cshtml
+++ b/WebApplication1/Views/Account/RegisterTeam.cshtml
@@ -27,6 +27,11 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="DataCreation" class="control-label"></label>
+                    <input type="date" asp-for="DataCreation" class="form-control" />
+                    <span asp-validation-for="DataCreation" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="Password" class="control-label"></label>
                     <input type="password" asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
