Change styles of rewards

--- a/WebApplication1/Views/Team/EditReward.cshtml
+++ b/WebApplication1/Views/Team/EditReward.cshtml
@@ -29,7 +29,7 @@
 
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
-                <a class="btn btn-default" asp-action="ListReward">Cancel</a>
+                <a class="btn btn-default" asp-action="Index">Cancel</a>
             </div>
         </form>
     </div>
